# usecasecore

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  concepts.md  getting-started.md  index.md  move-inventory.md  quickstart.md
docs/examples/: move-inventory.md
docs/releases/: 0.1.0a3.md
examples/: __init__.py
examples/fastapi_sqlalchemy_inventory/: README.md  __init__.py  app.py  database.py  models.py  repositories.py  schemas.py  transaction.py  usecases.py
examples/move_inventory/: README.md  __init__.py  app.py  models.py  repositories.py  usecases.py
src/usecasecore/: __init__.py  audit.py  command.py  context.py  errors.py  events.py  idempotency.py  jobs.py  repositories.py  result.py  transaction.py  types.py  usecase.py
src/usecasecore/adapters/: __init__.py  event_bus.py  job_queue.py  policy.py  transitions.py  workflow.py
tests/: test_idempotency.py  test_result.py  test_usecase_base.py
tests/examples/: test_fastapi_sqlalchemy_inventory.py  test_move_inventory.py
