[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usecasecore"
version = "0.1.0"
description = "The standard runtime for application use cases."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "UseCaseCore" }
]
maintainers = [
  { name = "UseCaseCore" }
]
keywords = [
  "application-services",
  "audit",
  "business-logic",
  "commands",
  "idempotency",
  "transactions",
  "use-cases",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://usecasecore.com"
Repository = "https://github.com/UseCaseCore/usecasecore"
Documentation = "https://usecasecore.pages.dev"
Issues = "https://github.com/UseCaseCore/usecasecore/issues"
Changelog = "https://github.com/UseCaseCore/usecasecore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.4"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9"]
pydantic = ["pydantic>=2"]
fastapi = ["fastapi>=0.110"]
sqlmodel = ["sqlmodel>=0.0.16"]
sqlalchemy = ["sqlalchemy>=2"]
temporal = ["temporalio>=1"]
oso = ["oso>=0.27"]
transitions = ["transitions>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["usecasecore*"]

[tool.setuptools.package-data]
usecasecore = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
